Update Emacs Config
Updated the GNU Emacs config to include 2 extra packages:
	lua-mode
	vimrc-mode

lua-mode
========
Gives Lua Support

vimrc-mode
==========
Vim Mode

--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -79,6 +79,8 @@ Which makes it both easier and more efficient.
 ** Language Packages
 #+BEGIN_SRC emacs-lisp
 (package 'haskell-mode)
+(package 'vimrc-mode)
+(package 'lua-mode)
 #+END_SRC
 
 * Package Setup
